Various accreted testing changes

--- a/r2/r2/templates/upcomingmeetups.html
+++ b/r2/r2/templates/upcomingmeetups.html
@@ -25,3 +25,18 @@
   <a class="icon" href="/meetups/new/"></a>
   <a class="label" href="/meetups/new/">Add Meetup</a>
 </span>
+
+
+		</div>
+	</div>
+	<div class="spacer>
+		<div id="ea-resources" class="sidebox linkbox">
+			<h2>Effective Altruist Resources</h2>
+			<ul>
+				<li>
+					<a href="http://skillshare.im/">SkillShare</a>
+				</li>
+				<li>
+					<a href="http://effectivealtruismhub.com/donations">EA Donation Registry</a>
+				</li>
+			</ul>
