Tweaks to EA Profiles link

--- a/r2/r2/templates/prefoptions.html
+++ b/r2/r2/templates/prefoptions.html
@@ -128,10 +128,12 @@
           km of me</li>
       </ul>
 
-      <h6>EA Profiles Link</h6>
+      <h6><!-- doesn't look good: <a href="http://effectivealtruismhub.com/user/profiles">-->EA Profiles<!--</a>--> Link</h6>
       <ul>
-        <li><input id="url" name="url" type="url" pattern="(http)?(s?)(:\/\/)?(www.)?effectivealtruismhub\.com\/user\/.*" title="Please enter a link to an EA Profile" placeholder="http://effectivealtruismhub.com/" class="textbox" value="${c.user.pref_url}"/></li>
+        <li><input id="url" name="url" type="url" pattern="(http)?(s?)(:\/\/)?(www.)?effectivealtruismhub\.com\/user\/.*" title="Please enter a link to your EA Profile, which should look like http://effectivealtruismhub.com/user/your-name" placeholder="http://effectivealtruismhub.com/user/your-name" class="textbox" value="${c.user.pref_url}"/></li>
+        <li class="option-explanation">Add a link to your EA Profile so people can find out more about you when you comment. <a href="http://effectivealtruismhub.com/user/profiles/all/alphabetical">Find your Profile address here</a>, or <a href="http://effectivealtruismhub.com/user/register">sign up</a> if you don't already have one.</li>
       </ul>
+
 
       <button class="btn" type="submit">${_('Save Options')}</button>
     </div><!-- END options -->
