--- a/r2/r2/templates/base.html
+++ b/r2/r2/templates/base.html
@@ -30,7 +30,7 @@
   <head>
     <title>${self.Title()}</title>
 
-    <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"/>
+    <meta name="viewport" content="width=device-width; minimum-scale=0.25; maximum-scale=2.0" />
     <meta name="keywords" content="${self.keywords()}" />
     <meta name="title" content="${self.Title()}" />
     <% description = hasattr(thing, 'link') and thing.link._meta_description() %>
